# easy_ai_search

./: .dockerignore  .env.example  .gitignore  MODULE_11_PREPARATION_REPORT.md  MODULE_11_QUICK_REFERENCE.md  README.md  docker-compose.yml  pyproject.toml  requirements-api.txt  requirements-mcp.txt  requirements.txt  start.sh
.omx/context/: easy-ai-search-crawl-cleaning-optimization-20260406T044206Z.md
.omx/plans/: prd-easy-ai-search-crawl-cleaning-optimization.md  test-spec-easy-ai-search-crawl-cleaning-optimization.md
admin_ui/: app.js  index.html  style.css
api_server/: __init__.py  __main__.py  config.py  dependencies.py  main.py
api_server/endpoints/: __init__.py  algorithms.py  cache.py  config.py  health.py  logs.py  mcp.py  search.py  tokens.py  vector.py
api_server/middleware/: __init__.py  auth.py  errors.py  logging.py  rate_limit.py
api_server/models/: __init__.py  mcp.py  requests.py  responses.py  schemas.py
api_server/services/: __init__.py  algorithm_service.py  cache_service.py  config_service.py  db.py  log_service.py  mcp_prompt_handler.py  mcp_resource_handler.py  mcp_service.py  mcp_sse_handler.py  mcp_tool_handler.py  search_service.py  token_service.py  vector_service.py
api_server/tests/: conftest.py  run_tests.py  test_api_integration.py  test_mcp_sse.py  (+6 more)
docs/: AGENT_INTEGRATION.md  CRAWL_CLEANING_OPTIMIZATION.md  DEVELOPER_GUIDE.md  RELEASE_GUIDE.md
my_ai_search/: PROJECT_STRUCTURE.md  __init__.py  config.py  main.py  main_support.py  requirements.txt  run_tests.py
scripts/: search_cross_validate.py
searxng/: settings.yml
(+55 files in other folders)
