[project]
name = "opensearch"
version = "2.0.0"
description = "Local-first AI search engine with REST, MCP, admin UI, and vector search"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["my_ai_search/tests", "api_server/tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
